lab/99-final-exercise/final-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: final-web
  namespace: final-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: final-web
  template:
    metadata:
      labels:
        app: final-web
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
