lab/99-final-exercise/final-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: final-web
  namespace: final-demo
spec:
  type: ClusterIP
  selector:
    app: final-web
  ports:
    - name: http
      port: 80
      targetPort: 80
